[gd_scene load_steps=2 format=3 uid="uid://cmmqpkoko1wij"]

[ext_resource type="Script" uid="uid://u6d5illgu8dp" path="res://scripts/ui/main_menu_ui.gd" id="1_eyy0p"]

[node name="MainMenuUI" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eyy0p")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Main Menu"

[node name="PlayButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="SettingsButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"
